@@ -1,3 +1,10 @@
+2024-05-30  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-container-no-container-regexp):
+	New defcustom.
+	(tramp-actions-before-shell, tramp-actions-copy-out-of-band): Declare.
+	Add `tramp-container-no-container-regexp'.  (Bug#71200)
+
 2024-05-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-make-process):
